--- a/templates/page-content.mustache
+++ b/templates/page-content.mustache
@@ -7,39 +7,93 @@
 </div>
 
 <div class="content" id="page-content" role="main">        
-{{#page.contents}}
 
-    {{#title}}
-    <h2>{{& title}}
-        {{#description}}
-        &nbsp; <small><em>{{& description}}</em></small>
-        {{/description}}
-    </h2>
-    {{/title}}
-
-    {{#intro}}
-    <div class="lead">{{& intro}}</div>
-    {{/intro}}
+    {{#content_intro}}
+    <div class="lead">{{& content_intro}}</div>
+    {{/content_intro}}
 
     <div class="container">
-        {{& content}}
+
+
+<div class="alert alert-info dismissable visible-xs">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    <strong>NOTE</strong> - As this table is quite large, you should go to the "landscape" view of your device to view it under optimal conditions.
+</div>
+
+<br class="clearfix">
+<div class="row">
+    <div class="col-xs-12 col-sm-6">
+        <form class="form-horizontal form-nav" role="form" id="filter-field">
+            <label class="sr-only control-label" for="tableFilter">Filter table entries</label>
+            <span class="fa fa-search" id="tableFilter-icon-empty"></span>
+            <a href="#" title="Empty this search field" id="tableFilter-icon-filled"><span class="fa fa-times"></span></a>
+            <input type="search" name="filter-table" id="tableFilter" class="form-control search-query" placeholder="Filter table values" title="Type a string to filter table entries" tabindex="1" value="{{search_query}}">
+            <p class="help-block">Presets: <span id="quick-list-container"></span></p>
+        </form>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <select class="form-control" id="gotoSelector">
+              <option value="" class="disabled">Go to a section</option>
+        {{#mde_data}}
+              <option value="{{name}}">{{name}}</option>
+        {{/mde_data}}
+        </select>
+    </div>
+</div>
+<br class="clearfix">
+
+<div class="table-responsive">
+    <table class="table table-striped table-bordered table-hover tablefiltrable">
+    <thead>
+    <tr>
+        <th>Type</th>
+        <th>Name</th>
+        <th>Sample</th>
+        <th>Rendering</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    {{#mde_data}}
+    <tr data-rows="{{samples_count}}">
+        <td rowspan="{{samples_count}}" data-filter-value="{{long_type}}">
+            <abbr title="{{type_name}}">{{short_type}}</abbr>
+        </td>
+        <td id="{{name}}" rowspan="{{samples_count}}" data-filter-value="{{name}}">
+            {{name}}
+        </td>
+	{{#samples}}
+		{{#add_tr}}<tr>{{/add_tr}}
+        <td class="large"><pre>{{sample}}</pre></td>
+        <td class="large">{{& mde_sample}}</td>
+    </tr>
+	{{/samples}}
+	{{^samples}}
+        <td></td>
+        <td></td>
+    </tr>
+	{{/samples}}
+    {{/mde_data}}
+
+    </tbody>
+    </table>
+</div>
+
+<!--
+<?php
+$_footnotes = $cheat_sheet->getFootnotes();
+if (!empty($_footnotes)) : ?>
+<div class="footnotes">
+    <ol>
+    <?php foreach ($_footnotes as $id=>$note_content) : ?>
+        <li id="<?php echo $note_content['note-id']; ?>"><?php echo $note_content['text']; ?></li>
+    <?php endforeach; ?>
+    </ol>
+</div>
+<?php endif; ?>
+-->
+
     </div>
 
-    {{#has_notes}}
-    <ul class="list-group small">
-        {{#notes}}
-        <li class="list-group-item">{{& content}}</li>
-        {{/notes}}
-    </ul>
-    {{/has_notes}}
-
-    {{#show_hr}}
-    <hr class="clearfix">
-    {{/show_hr}}
-    {{^show_hr}}
-    <div class="clearfix"></div>
-    {{/show_hr}}
-
-{{/page.contents}}
 </div>
 
